History of this buildout
========================

6.0.0 (unreleased)
------------------


- Uninstall Classic Theme. [jladage]

- Removed folder "Persberichten". [jladage]

- Reindex Date indexes to prevent POSKeyErrors.  [jladage]

- Configure Documenten faceted navigation.  [jladage]

- Add theme titles to homepage agenda items if inside a theme.
  [jladage]

- Add index getThemeTitle and define it on theme, wow acquisition
  will take care of indexing all children. [jladage]

- Added next meeting (hearing CT) logic with support for multiple
  planned hearings. [jladage]

- Updated json-ld info and removed twitter from social channels in
  footer. [jladage]

- Added nodejs.cfg and package.json from Zest website.  [maurits]

- Add faceted navigation notes.
- Fix column width (homepage had gap between 2nd and 3rd column)
- Remove faceted nav year (range) widget
- Indent homepage.pt
- Update faceted faceted criteria
  [coen]

- Remove top pagination form facetednavigation
  [coen]

- Disable theme jquery. Use Plone jquery only.
  [coen]

- Diazo rules and styling of plone edit forms.
  [coen, lennard]

- Use mailchimp api3 branch
  [diederik]

- Add upgrade instructions for faceted criteria and javascript/css.
  [coen]

- Add theme mixin
- Add macros to render links
  [coen]

- Add theme mixin and macros to render link items.
  [coen]

- Add default view for theme folders.
  [coen]

- Add upgradesteps to add default page and select view for home and themes.
  [coen]

- Add Plone edit bar rules and styling.
- Basic Diazo to copy content.
  [coen]

- Add theme custom view
- Add the view to a default page.
  [coen]

- Fix arrow path.
  [coen]

- Add homepage view, template, diazo rules.
  [coen]

- Register faceted preview template for file attachments
  [coen]

- Add year select widget
  [coen]

- Add cunstom template for advice preview in faceted navigation.
  [coen, maurits]

- Add custom section radio widget based on the default radio widget from