@@ -432,6 +432,10 @@
         title="Unininstall Plone Classic Theme"
         description="Unininstall old Plone Classic Theme."
         handler="Products.minaraad.migration.unininstall_classic_theme" />
+    <gs:upgradeStep
+        title="Migrate Advisory foto field to ImageAttachment"
+        description="Migrate Advisory foto field to ImageAttachment."
+        handler="Products.minaraad.migration.migrate_advisory_foto_field_to_imageattachment" />
 
   </gs:upgradeSteps>
 
